--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.3"
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^4.15.3",
+    "tailwindcss": "^3.4.13"
   }
 }
